--- a/property-management-portal/package.json
+++ b/property-management-portal/package.json
@@ -7,11 +7,13 @@
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.6",
+    "@react-keycloak/web": "^3.4.0",
     "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "aws-sdk": "^2.1222.0",
+    "keycloak-js": "^19.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-material-ui-carousel": "^3.4.2",
