--- a/property-management-service/src/main/resources/application.yml
+++ b/property-management-service/src/main/resources/application.yml
@@ -1,32 +1,3 @@
 spring:
   application:
-    name: day3
-
-  datasource:
-    password: postgres
-    url: jdbc:postgresql://localhost:5432/property_mgmt_db
-    username: postgres
-
-  jpa:
-    hibernate:
-      ddl-auto: create-drop
-
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-
-        format_sql: true
-    show-sql: true
-    defer-datasource-initialization: true
-
-  sql:
-    init:
-      mode: always
-
-
-  main:
-    allow-bean-definition-overriding: true
-
-
-server:
-  port: 8080
+    name: property-management-service
