--- a/property-management-portal/package.json
+++ b/property-management-portal/package.json
@@ -16,12 +16,13 @@
     "keycloak-js": "^19.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-material-ui-carousel": "^3.4.2",
     "react-redux": "^8.0.2",
     "react-router": "^6.4.1",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "sass": "^1.55.0",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
