--- a/property-management-portal/package.json
+++ b/property-management-portal/package.json
@@ -13,8 +13,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "aws-sdk": "^2.1222.0",
-    "keycloak-js": "^19.0.2",
     "axios": "^0.27.2",
+    "echarts-for-react": "^3.0.2",
+    "keycloak-js": "^19.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
