--- a/property-management-portal/package.json
+++ b/property-management-portal/package.json
@@ -13,10 +13,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "aws-sdk": "^2.1222.0",
-    "keycloak-js": "^19.0.2",
     "axios": "^0.27.2",
+    "keycloak-js": "^19.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dotenv": "^0.1.3",
     "react-redux": "^8.0.2",
     "react-router": "^6.4.1",
     "react-router-dom": "^6.4.1",
