--- a/property-management-portal/.env
+++ b/property-management-portal/.env
@@ -1,5 +1,5 @@
-BASE_URL=http://localhost:8080
-AUTH_URL=http://localhost:9090
-AUTH_REALM=PropertyPortal
-AUTH_CLIENT_ID=property-management-portal
-LIMIT_PER_FETCH=15
+REACT_APP_BASE_URL=http://localhost:8080
+REACT_APP_AUTH_URL=http://localhost:9090
+REACT_APP_AUTH_REALM=PropertyPortal
+REACT_APP_AUTH_CLIENT_ID=property-management-portal
+REACT_APP_LIMIT_PER_FETCH=15
