--- a/property-management-portal/jsconfig.json
+++ b/property-management-portal/jsconfig.json
@@ -1,6 +1,11 @@
 {
   "compilerOptions": {
-    "baseUrl": "src"
+    "baseUrl": "src",
+    "paths": {
+      "@/*": ["*"],
+      "@/components/*": ["components/*"],
+      "@/services/*": ["services/*"]
+    }
   },
   "include": ["src"]
 }
