presignURL in backend, upload component but not finished yet

--- a/property-management-service/src/main/resources/application.yml
+++ b/property-management-service/src/main/resources/application.yml
@@ -37,3 +37,4 @@ aws:
   arn: "arn:aws:s3:::waaproject-bucket"
   access-key-id: "AKIA52GH5C2PD3QLK7CK"
   secret-access-key: "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"
+  base-url: "https://waaproject-bucket.s3.us-west-1.amazonaws.com"
