--- a/property-management-portal/package.json
+++ b/property-management-portal/package.json
@@ -20,7 +20,7 @@
     "keycloak-js": "^19.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-number-format": "^5.0.0-beta.5",
+    "react-number-format": "^5.0.0",
     "react-redux": "^8.0.2",
     "react-router": "^6.4.1",
     "react-router-dom": "^6.4.1",
