--- a/property-management-service/pom.xml
+++ b/property-management-service/pom.xml
@@ -30,6 +30,12 @@
             <artifactId>spring-boot-starter-cache</artifactId>
             <version>2.7.4</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+
 <!--        <dependency>-->
 <!--            <groupId>org.springframework.boot</groupId>-->
 <!--            <artifactId>spring-boot-starter-security</artifactId>-->
