--- a/property-management-service/src/main/resources/application.yml
+++ b/property-management-service/src/main/resources/application.yml
@@ -35,3 +35,5 @@ aws:
   s3-bucket: "waaproject-bucket"
   region: "us-west-1"
   base-url: "https://waaproject-bucket.s3.us-west-1.amazonaws.com"
+  accessKey-id: ${ACCESS_KEY_ID}
+  access-key-secret: ${ACCESS_KEY_SECRET}
