--- a/property-management-portal/jsconfig.json
+++ b/property-management-portal/jsconfig.json
@@ -4,6 +4,7 @@
     "paths": {
       "@/*": ["*"],
       "@/components/*": ["components/*"],
+      "@/hooks/*": ["hooks/*"],
       "@/services/*": ["services/*"]
     }
   },
